# acutis

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .runsettings  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  cpp.hint  requirements.txt  tmp-clang-tidy
.github/workflows/: build_cmake.yml
cmake/: Conan.cmake  GitInfo.cmake  ProjectVersion.cmake  Sanitizers.cmake
examples/: CMakeLists.txt
examples/http_demo/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
src/http/: CMakeLists.txt  method.cpp  parser.cpp  uri.cpp
src/http/include/http/: message.h  method.h  parser.h  uri.h  version.h
src/http/test/: CMakeLists.txt  test_parser.cpp
src/net/: CMakeLists.txt  address.cpp  socket_server.cpp  socket_server_impl.h
src/net/include/net/: address.h  socket_server.h
src/net/posix/: posix_server_socket.cpp  posix_server_socket.h  posix_socket.cpp  posix_socket.h  posix_util.cpp  posix_util.h  socket_server_posix.cpp  socket_server_posix.h
src/net/test/: CMakeLists.txt  test_address.cpp
src/net/windows/: socket_server_win.cpp  socket_server_win.h  win_server_socket.cpp  win_server_socket.h  win_socket.cpp  win_socket.h  win_socket_api.cpp  win_socket_api.h  win_util.cpp  win_util.h
src/stream/: CMakeLists.txt
src/stream/include/stream/: stream.h
templates/: project_version.h.in
test/: CMakeLists.txt
test/catch_main/: CMakeLists.txt
test/system/: CMakeLists.txt  conftest.py  pytest.ini  test_system_tests_run.py  test_tcp_connection.py
test/system/test_server/: CMakeLists.txt  main.cpp
test/test_doubles/: CMakeLists.txt  stub_stream.cpp
test/test_doubles/include/test_doubles/: stub_stream.h
